--- a/Wieczorna_nauka_aplikacja_webowa/appsettings.json
+++ b/Wieczorna_nauka_aplikacja_webowa/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Authentication": {
-    "Jwtkey": "PRIVATE_KEY_DONT_SHARE",
+    "Jwtkey": "PRIVATE_KEY_DONT_SHARE", //reprezentuje klucz potrzebny do utworznia Tokenu JWT,
+    // czyli tutaj bêdzie wartoœæ klucza prywantego,
     "JwtExpireDays": 15,
-    "JwtIssuer": "http://rentalcarapi.com"
+    "JwtIssuer": "http://rentalcarapi.com" //podmiot-serwer, który generuje dany token
   },
   "Logging": {
     "LogLevel": {
