push and commit

--- a/Wieczorna_nauka_aplikacja_webowa/appsettings.Development.json
+++ b/Wieczorna_nauka_aplikacja_webowa/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "RentalCarDbConnection": "Server=SEBASTIANPGAB\\SQLEXPRESS; Database=RentalCarDb; Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
