--- a/Wieczorna_nauka_aplikacja_webowa/appsettings.Development.json
+++ b/Wieczorna_nauka_aplikacja_webowa/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionString": {
-    "RentalCarDbConnection": "Server=SEBASTIANPGAB\\SQLEXPRESS; Database=RentalCarDb; Trusted_Connection=True;"
+  "ConnectionStrings": {
+    "RentalCarDbConnection" : "Server=SEBASTIANPGAB\\SQLEXPRESS; Database=RentalCarDb; Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
