--- a/Wieczorna_nauka_aplikacja_webowa/nlog.config
+++ b/Wieczorna_nauka_aplikacja_webowa/nlog.config
@@ -18,7 +18,7 @@
 	
   <rules>
 	<logger name="*" minlevel="Trace"  writeTo="logfile" />
-	<logger name="Wieczorna_nauka_aplikacja_webowa.*" minlevel="Error"  writeTo="exceptions" />
-	<logger name="Wieczorna_nauka_aplikacja_webowa.Middleware.RequestTimeMiddleware" minlevel="Trace"  writeTo="timeInformation" />
+	<logger name="Wieczorna_nauka_aplikacja_webowa.*" minlevel="Error"  writeTo="logfile" />
+	<logger name="Wieczorna_nauka_aplikacja_webowa.Middleware.RequestTimeMiddleware" minlevel="Trace"  writeTo="logfile" />
   </rules>
 </nlog>
