--- a/Wieczorna_nauka_aplikacja_webowa/appsettings.Development.json
+++ b/Wieczorna_nauka_aplikacja_webowa/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "RentalCarDbConnection" : "Server=SEBASTIANPGAB\\SQLEXPRESS; Database=RentalCarDb; Trusted_Connection=True;"
-  },
+    "RentalCarDbConnection": "Server=SEBASTIANPGAB\\SQLEXPRESS; Database=RentalCarDb; Trusted_Connection=True;"
+  }, //"Server=SEBASTIANPGAB\\SQLEXPRESS; Database=RentalCarDb; Trusted_Connection=True;"
   "Logging": {
     "LogLevel": {
       "Default": "Information",
